added javadoc to the distribution
svn path=/trunk/openspaces/; revision=12931


Former-commit-id: 5c15409992a65d44cdfcb53fee30962536d64273